# mnist-cuda

./: CMakeLists.txt  README.md  TODO.md
include/: common.h  matmul_forward.cu
include/layer/: matmul.cuh
include/utils/: float_utils.h
src/layer/: matmul_forward.cu
tests/: CMakeLists.txt  matmul_forward_test.cu
