cmake_minimum_required(VERSION 3.20)

project(MNIST_CUDA LANGUAGES CXX CUDA)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CUDA_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CUDA_STANDARD_REQUIRED ON)

set(CMAKE_CUDA_SEPARABLE_COMPILATION ON)

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
endif()

set(CMAKE_CUDA_ARCHITECTURES 86)

# include_directories(${CMAKE_SOURCE_DIR}/include)

find_package(CUDAToolkit REQUIRED)

add_subdirectory(${CMAKE_SOURCE_DIR}/include)


